objects/FLODocs__Deplyoment_Log__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Async_Internal_Id__c</fullName>
        <description>Internal ID used by Strongpoint and Salesforce to determine the real deployment process</description>
        <inlineHelpText>Internal ID used by Strongpoint and Salesforce to determine the real deployment process</inlineHelpText>
        <label>Async Internal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Request</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipName>Deployment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__Component_Errors__c</fullName>
        <description>The number of components that generated errors during this deployment.</description>
        <inlineHelpText>The number of components that generated errors during this deployment.</inlineHelpText>
        <label>Component Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Components_Deployed__c</fullName>
        <description>The number of components deployed in the deployment process. Strongpoint use this value with the numberComponentsTotal value to get an estimate of the deployment’s progress.</description>
        <inlineHelpText>The number of components deployed in the deployment process. Strongpoint use this value with the numberComponentsTotal value to get an estimate of the deployment’s progress.</inlineHelpText>
        <label>Components Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Components_Total__c</fullName>
        <description>The total number of components in the deployment</description>
        <inlineHelpText>The total number of components in the deployment</inlineHelpText>
        <label>Components Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customizations__c</fullName>
        <label>Customizations</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deploy_Error_Messages__c</fullName>
        <description>Strongpoint will use this text area to show all the Components and its errors during the deployment.</description>
        <inlineHelpText>Strongpoint will use this text area to show all the Components and its errors during the deployment.</inlineHelpText>
        <label>Deploy Error Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Deployment_Status__c</fullName>
        <formula>IMAGE( 
CASE( FLODocs__Status__c, 
&quot;Pending&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;InProgress&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Succeeded&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;SucceededPartial&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Failed&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Canceling&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Canceled&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;), 
&quot;Not Started&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deployment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Environment_Compare_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment Compare Log</label>
        <referenceTo>FLODocs__FLO_Environment_Compare_Log__c</referenceTo>
        <relationshipName>Deployment_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Retrieve_Error_Message__c</fullName>
        <label>Retrieve Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Retrieve_Status__c</fullName>
        <formula>IMAGE( 
CASE( FLODocs__Status__c, 
&quot;Retrieve Completed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Pending&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;InProgress&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Succeeded&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;SucceededPartial&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Failed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Canceling&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Canceled&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Validation Completed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Validation Failed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Validation In Progress&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Retrieve Completed&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Retrieve In Progress&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;Retrieve Failed&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Retrive&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retrieve Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Run_Test_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether Apex tests were run as part of this deployment (true) or not (false). Tests are either automatically run as part of a deployment or can be set to run in DeployOptions - Strongpoint creates DeployOptions internally</description>
        <label>Run Test Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Run_Tests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Start_Date__c</fullName>
        <description>Deployment Start Date</description>
        <inlineHelpText>Deployment Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FLODocs__State_Detail__c</fullName>
        <description>Indicates which component is being deployed or which Apex test class is running.</description>
        <inlineHelpText>Indicates which component is being deployed or which Apex test class is running.</inlineHelpText>
        <label>State Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>Succeeded</fullName>
                </value>
                <value>
                    <fullName>SucceededPartial</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Canceling</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Retrieve In Progress</fullName>
                </value>
                <value>
                    <fullName>Retrieve Completed</fullName>
                </value>
                <value>
                    <fullName>Retrieve Failed</fullName>
                </value>
                <value>
                    <fullName>Validation In Progress</fullName>
                </value>
                <value>
                    <fullName>Validation Completed</fullName>
                </value>
                <value>
                    <fullName>Validation Failed</fullName>
                </value>
                <value>
                    <fullName>Rollback In Progress</fullName>
                </value>
                <value>
                    <fullName>Rollback Partial</fullName>
                </value>
                <value>
                    <fullName>Rollback Completed</fullName>
                </value>
                <value>
                    <fullName>Rollback Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Level__c</fullName>
        <label>Test Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Tests_Error_Message__c</fullName>
        <description>Strongpoint will use this field to include all the test failures during the deplyoment</description>
        <inlineHelpText>Strongpoint will use this field to include all the test failures during the deplyoment</inlineHelpText>
        <label>Tests Error Message</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__Tests_Selected__c</fullName>
        <label>Tests Selected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Customizations_Deployed__c</fullName>
        <label># of Customizations Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Test_Errors__c</fullName>
        <description>The number of Apex tests that have generated errors during this deployment.</description>
        <inlineHelpText>The number of Apex tests that have generated errors during this deployment.</inlineHelpText>
        <label># of Test Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Tests_Completed__c</fullName>
        <description>The number of completed Apex tests for this deployment. Strongpoint uses this value with the numberTestsTotal value to get an estimate of the deployment’s test progress.</description>
        <inlineHelpText>The number of completed Apex tests for this deployment. Strongpoint uses this value with the numberTestsTotal value to get an estimate of the deployment’s test progress.</inlineHelpText>
        <label># of Tests Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FLODocs__of_Tests_Total__c</fullName>
        <description>The total number of Apex tests for this deployment.</description>
        <inlineHelpText>The total number of Apex tests for this deployment.</inlineHelpText>
        <label># of Tests Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Deployment Log</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Deplyoment Log  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>